media/error_tc/error_249.txt
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_PRQ9NN9.cpp: In function 'int main()':
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_PRQ9NN9.cpp:8:1: error: expected ';' before '}' token
 }
 ^
